# br_energy

./: .gitignore  LICENSE  README.md  pyproject.toml
data/interim/daily/: Carga Energia 2000 S.csv  Carga Energia 2001 S.csv  Carga Energia 2002 S.csv  Carga Energia 2003 S.csv  Carga Energia 2004 S.csv  Carga Energia 2005 S.csv  Carga Energia 2006 S.csv  Carga Energia 2007 S.csv  Carga Energia 2008 S.csv  Carga Energia 2009 S.csv  Carga Energia 2010 S.csv  Carga Energia 2011 S.csv  Carga Energia 2012 S.csv  Carga Energia 2013 S.csv  Carga Energia 2014 S.csv  Carga Energia 2015 S.csv  Carga Energia 2016 S.csv  Carga Energia 2017 S.csv  Carga Energia 2018 S.csv  Carga Energia 2019 S.csv  Carga Energia 2020 S.csv  Carga Energia 2021 S.csv  Carga Energia 2022 S.csv  Carga Energia 2023 S.csv  Carga Energia 2024 S.csv
data/raw/daily/: CARGA_ENERGIA_2024.csv
data/raw/hourly/: CURVA_CARGA_2021.csv  CURVA_CARGA_2024.csv
notebooks/: br_energy.ipynb
