[tool.poetry]
name = "br-energy"
version = "0.1.0"
description = ""
authors = ["andrey-lolobrigida <andrey.lolobrigida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
pyarrow = "^16.0.0"
statsmodels = "^0.14.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
